--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
     html * { margin: 0; padding: 0; }
     body, #app { height: 100% }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TS1FJLBPD"></script>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    ga('create', 'UA-6899787-54', 'auto');
-    ga('send', 'pageview');
+    gtag('config', 'G-7TS1FJLBPD');
   </script>
 </head>
 <body>
